--- a/Read/ReadAndroidWiki/10.Window/19.布局解析者Inflater.md
+++ b/Read/ReadAndroidWiki/10.Window/19.布局解析者Inflater.md
@@ -109,12 +109,12 @@
                  throws NotFoundException {
              final TypedValue value = obtainTempTypedValue();
              try {
-                 final ResourcesImpl impl = mResourcesImpl;
+                 final ResourcesImpl com.yc.other.impl = mResourcesImpl;
                  //1. 获取xml布局资源，并保存在TypedValue中。
-                 impl.getValue(id, value, true);
+                 com.yc.other.impl.getValue(id, value, true);
                  if (value.type == TypedValue.TYPE_STRING) {
                      //2. 加载对应的loadXmlResourceParser解析器。
-                     return impl.loadXmlResourceParser(value.string.toString(), id,
+                     return com.yc.other.impl.loadXmlResourceParser(value.string.toString(), id,
                              value.assetCookie, type);
                  }
                  throw new NotFoundException("Resource ID #0x" + Integer.toHexString(id)
