--- a/Read/ReadMeWiki/00.方案实践/07.App磁盘沙盒工具实践.md
+++ b/Read/ReadMeWiki/00.方案实践/07.App磁盘沙盒工具实践.md
@@ -23,6 +23,8 @@
     - 4.5 10和11权限说明
     - 4.6 分享文件给第三方
     - 4.7 打开图片资源
+    - 4.8 为何需要FileProvider
+    - 4.9 跨进程IPC通信
 - 05.其他设计实践说明
     - 5.1 性能设计
     - 5.2 稳定性设计
@@ -354,6 +356,141 @@
     - 加载图片，先加载到内存，再进行操作吗，可以如果先加载到内存，好像也不太对，这样只接占用了 19.6M + 0.2M 2份内存了，而我们想要的是，在原图不加载到内存中，只接将缩放后的图片加载到内存中，可以实现吗？
     - 进行内存压缩，要将BitmapFactory.Options的inJustDecodeBounds属性设置为true，解析一次图片。注意这个地方是核心，这个解析图片并没有生成bitmap对象(也就是说没有为它分配内存控件)，而仅仅是拿到它的宽高等属性。
     - 然后将BitmapFactory.Options连同期望的宽度和高度一起传递到到calculateInSampleSize方法中，就可以得到合适的inSampleSize值了。这一步会压缩图片。之后再解析一次图片，使用新获取到的inSampleSize值，并把inJustDecodeBounds设置为false，就可以得到压缩后的图片了。
+
+
+
+#### 4.8 为何需要FileProvider
+##### 4.8.1 文件共享基础概念
+- 了解文件共享的基础知识
+    - 提到文件共享，首先想到就是在本地磁盘上存放一个文件，多个应用都可以访问它，如下：
+    - 理想状态下只要知道了文件的存放路径，那么各个应用都可以读写它。比如相册里的图片或者视频存放目录：/sdcard/DCIM/、/sdcard/Pictures/ 、/sdcard/Movies/。
+- 文件共享方式是如何理解
+    - 一个常见的应用场景：应用A里检索到一个文件yc.txt，它无法打开，于是想借助其它应用打开，这个时候它需要把待打开的文件路径告诉其它应用。对应案例就是，把磁盘文件分享到qq。
+    - 这就涉及到了进程间通信。Android进程间通信主要手段是Binder，而四大组件的通信也是依靠Binder，因此我们应用间传递路径可以依靠四大组件。
+
+
+##### 4.8.2 7.0前后对文件处理方式
+- Android 7.0 之前使用，传递路径可以通过Uri
+    ``` java
+    Intent intent = new Intent();
+    intent.setAction(Intent.ACTION_VIEW);
+    //通过路径，构造Uri。设置Intent，附带Uri，然后通过intent跨进程通信
+    Uri uri = Uri.fromFile(new File(external_filePath));
+    intent.setData(uri);
+    startActivity(intent);
+    ```
+    - 接收方在收到Intent后，拿出Uri，通过：filePath = uri.getEncodedPath() 拿到发送方发送的原始路径后，即可读写文件。然而此种构造Uri方式在Android7.0(含)之后被禁止了，若是使用则抛出异常，异常是FileUriExposedException。
+    - 这种方式缺点如下：第一发送方传递的文件路径接收方完全知晓，一目了然，没有安全保障；第二发送方传递的文件路径接收方可能没有读取权限，导致接收异常。
+- Android 7.0(含)之后如何解决上面两个缺点问题
+    - 对第一个问题：可以将具体路径替换为另一个字符串，类似以前密码本的感觉，比如："/storage/emulated/0/com.yc.app/yc.txt" 替换为"file/yc.txt"，这样接收方收到文件路径完全不知道原始文件路径是咋样的。那么会导致另一个额外的问题：接收方不知道真实路径，如何读取文件呢?
+    - 对第二个问题既然不确定接收方是否有打开文件权限，那么是否由发送方打开，然后将流传递给接收方就可以了呢？
+    - Android 7.0(含)之后引入了FileProvider，可以解决上述两个问题。
+
+
+
+##### 4.8.3 FileProvider应用与原理
+- 第一步，定义自定义FileProvider并且注册清单文件
+    ``` java
+    public class ExplorerProvider extends FileProvider {
+    
+    }
+    
+    <!--既然是ContentProvider，那么需要像Activity一样在AndroidManifest.xml里声明：-->
+    <!--android:authorities 标识ContentProvider的唯一性，可以自己任意定义，最好是全局唯一的。-->
+    <!--android:name 是指之前定义的FileProvider 子类。-->
+    <!--android:exported="false" 限制其他应用获取Provider。-->
+    <!--android:grantUriPermissions="true" 授予其它应用访问Uri权限。-->
+    <!--meta-data 囊括了别名应用表。-->
+    <!--android:name 这个值是固定的，表示要解析file_path-->
+    <!--android:resource 自己定义实现的映射表-->
+    <provider
+        android:name="com.yc.toolutils.file.ExplorerProvider"
+        android:authorities="${applicationId}.fileExplorerProvider"
+        android:exported="false"
+        android:grantUriPermissions="true">
+        <meta-data
+            android:name="android.support.FILE_PROVIDER_PATHS"
+            android:resource="@xml/file_explorer_provider" />
+    </provider>
+    ```
+- 第二步，添加路径映射表
+    - 在/res/ 下建立xml 文件夹，然后再创建对应的映射表(xml)，最终路径如下：/res/xml/file_explorer_provider.xml。
+    ```
+    <paths>
+        <!--FileProvider需要读取映射表。-->
+        <external-cache-path name="external_cache" path="." />
+        <cache-path name="cache" path="." />
+        <external-path name="external_path" path="." />
+        <files-path name="files_path" path="." />
+        <external-files-path name="external_files_path" path="." />
+        <root-path name="root_path" path="." />
+    </paths>
+    ```
+- 第三步，使用ExplorerProvider来跨进程通信交互
+    - 如何解决第一个问题，让接收方看不到具体文件的路径？如下所示，下面构造后，第三方应用收到此Uri后，并不能从路径看出我们传递的真实路径，这就解决了第一个问题。
+    ``` java
+    public static boolean shareFile(Context context, File file) {
+        boolean isShareSuccess;
+        try {
+            if (null != file && file.exists()) {
+                Intent share = new Intent(Intent.ACTION_SEND);
+                //此处可发送多种文件
+                String absolutePath = file.getAbsolutePath();
+                //通过扩展名找到mimeType
+                String mimeType = getMimeType(absolutePath);
+                share.setType(mimeType);
+                Uri uri;
+                //判断7.0以上
+                if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.N) {
+                    //第二个参数表示要用哪个ContentProvider，这个唯一值在AndroidManifest.xml里定义了
+                    //若是没有定义MyFileProvider，可直接使用FileProvider替代
+                    String authority = context.getPackageName() + ".fileExplorerProvider";
+                    uri = FileProvider.getUriForFile(context,authority, file);
+                } else {
+                    uri = Uri.fromFile(file);
+                }
+                //content://com.yc.lifehelper.fileExplorerProvider/external_path/fileShare.txt
+                //content 作为scheme；
+                //com.yc.lifehelper.fileExplorerProvider 即为我们定义的 authorities，作为host；
+                LogUtils.d("share file uri : " + uri);
+                String encodedPath = uri.getEncodedPath();
+                //external_path/fileShare.txt
+                //如此构造后，第三方应用收到此Uri后，并不能从路径看出我们传递的真实路径，这就解决了第一个问题：
+                //发送方传递的文件路径接收方完全知晓，一目了然，没有安全保障。
+                LogUtils.d("share file uri encode path : " + encodedPath);
+                share.putExtra(Intent.EXTRA_STREAM, uri);
+                share.setFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
+                //赋予读写权限
+                share.addFlags(Intent.FLAG_GRANT_READ_URI_PERMISSION);
+                Intent intent = Intent.createChooser(share, "分享文件");
+                //交由系统处理
+                context.startActivity(intent);
+                isShareSuccess = true;
+            } else {
+                isShareSuccess = false;
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+            isShareSuccess = false;
+        }
+        return isShareSuccess;
+    }
+    ```
+    - 如何解决第二个问题，发送方传递的文件路径接收方可能没有读取权限，导致接收异常？通过FileProvider.getUriForFile为入口查看源码，应用间通过IPC机制，最后调用了openFile()方法，而FileProvider重写了该方法。
+
+
+
+#### 4.9 跨进程IPC通信
+- A应用(该demo)通过构造Uri，通过intent调用B(分享到QQ)
+    - 应用A将path构造为Uri：应用A在启动的时候，会扫描AndroidManifest.xml 里的 FileProvider，并读取映射表构造为一个Map。
+    - 还是以/storage/emulated/0/com.yc.lifehelper.fileExplorerProvider/external_path/fileShare.txt 为例，当调用 FileProvider.getUriForFile(xx)时，遍历Map，找到最匹配条目，最匹配的即为external_file。因此会用external_file 代替原始路径，最终形成的Uri为：content://com.yc.lifehelper.fileExplorerProvider/external_path/fileShare.txt
+- B应用(QQ)通过Uri构造输入流，将Uri解析成具体的路径
+    - 应用B通过Uri(A传递过来的)，解析成具体的file文件。先将Uri分离出external_file/fileShare.txt，然后通过external_file 从Map里找到对应Value 为：/storage/emulated/0/com.yc.lifehelper.fileExplorerProvider/，最后将fileShare.txt拼接，形成的路径为：/storage/emulated/0/com.yc.lifehelper.fileExplorerProvider/external_path/fileShare.txt
+- 现在来梳理整个流程：
+    - 1、应用A使用FileProvider通过Map(映射表)将Path转为Uri，通过IPC 传递给应用B。
+    - 2、应用B使用Uri通过IPC获取应用A的FileProvider。
+    - 3、应用A使用FileProvider通过映射表将Uri转为Path，并构造出文件描述符。
+    - 4、应用A将文件描述符返回给应用B，应用B就可以读取应用A发送的文件了。
 
 
 
