--- a/Read/ReadMeWiki/00.方案实践/21.Apt实现组件接口通信.md
+++ b/Read/ReadMeWiki/00.方案实践/21.Apt实现组件接口通信.md
@@ -249,7 +249,7 @@
     - 待完善
 - new和Class.forName("").newInstance()创建对象有何区别？
     ``` java
-    A a = (A)Class.forName("com.yc.demo.impl.UpdateImpl").newInstance();
+    A a = (A)Class.forName("com.yc.demo.com.yc.other.impl.UpdateImpl").newInstance();
     A a = new A()；
     ```
     - 它们的区别在于创建对象的方式不一样，前者(newInstance)是使用类加载机制，后者(new)是创建一个新类。
