完善堆栈管理器

--- a/Read/ReadJavaWiki/04.数据结构/01.数据集合序言介绍.md
+++ b/Read/ReadJavaWiki/04.数据结构/01.数据集合序言介绍.md
@@ -8,10 +8,13 @@
 
 
 ### 01.学习集合序言
-- 很多写程序的人都听说过一个公式，程序 = 算法 + 数据结构。而在 Java 中，自身已经提供了丰富的集合，来帮助我们处理和管理数据，但是多数情况下，我们比较常用的就那么几个，可这并不妨碍我们学习了解其他「冷门」的集合类。
-- 但是集合类那么多，怎么学？一个一个方法看其内部实现？我想你就算耐着性子看完了，没几天也都忘干净了，因为细节太多了，同时使用的频率低，遗忘是必然的。
-- 所有的集合类都是为数据和业务服务的，对外无外乎就是增删改查几种操作，对内无法避免的还有一些例如初始化、数据的维护、动态扩容等等实现，细节都在内部。
-- 在学习集合类的时候，应该保持一个清晰的主线，只关注几个重要的问题，你就可以还原对这个集合的认识。
+- 很多写程序的人都听说过一个公式，程序 = 算法 + 数据结构。
+    - 而在 Java 中，自身已经提供了丰富的集合，来帮助我们处理和管理数据，但是多数情况下，我们比较常用的就那么几个，可这并不妨碍我们学习了解其他「冷门」的集合类。
+- 但是集合类那么多，怎么学？
+    - 一个一个方法看其内部实现？我想你就算耐着性子看完了，没几天也都忘干净了，因为细节太多了，同时使用的频率低，遗忘是必然的。
+    - 所有的集合类都是为数据和业务服务的，对外无外乎就是增删改查几种操作，对内无法避免的还有一些例如初始化、数据的维护、动态扩容等等实现，细节都在内部。
+- 在学习集合类的时候怎么做？
+    - 应该保持一个清晰的主线，只关注几个重要的问题，你就可以还原对这个集合的认识。
 
 
 
@@ -24,8 +27,10 @@
 
 
 ### 03.集合特有侧重点
-- 程序的世界里，没有银弹，否则其他集合就没有了存在的必要。也就是说每个集合一定有不同的侧重点，它在时间和空间上，一定是有所取舍，有所平衡，在这个目标下，做出最合适的优化实现。
-- 就拿 HashMap 来说，它作为一个工业级的集合类，其中有不少复杂的实现细节，用哈希表让查询的时间复杂度达到 O(1)，但是「哈希冲突」是它需要面对的问题，所以它采用「拉链法」的方式解决冲突，又因为链表会让时间复杂度在极端情况下退化到O(n)，又引入了红黑树，以保证在最恶劣的情况下时间复杂度也不会退化的太严重。
+- 程序的世界里，没有银弹，否则其他集合就没有了存在的必要。
+    - 也就是说每个集合一定有不同的侧重点，它在时间和空间上，一定是有所取舍，有所平衡，在这个目标下，做出最合适的优化实现。
+- 就拿 HashMap 来举例子
+    - 它作为一个工业级的集合类，其中有不少复杂的实现细节，用哈希表让查询的时间复杂度达到 O(1)，但是「哈希冲突」是它需要面对的问题，所以它采用「拉链法」的方式解决冲突，又因为链表会让时间复杂度在极端情况下退化到O(n)，又引入了红黑树，以保证在最恶劣的情况下时间复杂度也不会退化的太严重。
 
 
 
@@ -115,10 +120,28 @@
 ### 05.集合一些总结
 #### 5.1 集合总结
 - ![image](https://upload-images.jianshu.io/upload_images/4432347-760b4c34becd66c1.png)
-- **1. List**
-    - ArrayList：基于动态数组实现，支持随机访问。
+
+
+#### 5.2 List集合
+- List总结梳理
+    - ArrayList：基于动态数组实现，支持随机访问；线程不安全；底层由数组实现（顺序表），因为由顺序表实现，所以会具备顺序表的特点。
     - Vector：和 ArrayList 类似，但它是线程安全的。
     - LinkedList：基于双向链表实现，只能顺序访问，但是可以快速地在链表中间插入和删除元素。不仅如此，LinkedList 还可以用作栈、队列和双向队列。
+- 如何选择合适list
+    - 对于随机查询与迭代遍历操作，数组比所有的容器都要快。所以在随机访问中一般使用ArrayList。
+    - LinkedList使用双向链表对元素的增加和删除提供了非常好的支持，而ArrayList执行增加和删除元素需要进行元素位移。
+    - 对于Vector而已，我们一般都是避免使用。（ArrayList可用通过Collections中的方法转换为线程安全类）
+    - 将ArrayList当做首选，毕竟对于集合元素而已我们都是进行遍历，只有当程序的性能因为List的频繁插入和删除而降低时，再考虑LinkedList。
+- List集合读写机制
+    - ArrayList在执行插入元素是超过当前数组预定义的最大值时，数组需要扩容，扩容过程需要调用底层System.arraycopy()方法进行大量的数组复制操作；在删除元素时并不会减少数组的容量（如果需要缩小数组容量，可以调用trimToSize()方法）；在查找元素时要遍历数组，对于非null的元素采取equals的方式寻找。
+    - LinkedList在插入元素时，须创建一个新的Entry对象，并更新相应元素的前后元素的引用；在查找元素时，需遍历链表；在删除元素时，要遍历链表，找到要删除的元素，然后从链表上将此元素删除即可。
+    - Vector与ArrayList仅在插入元素时容量扩充机制不一致。对于Vector，默认创建一个大小为10的Object数组，并将capacityIncrement设置为0；当插入元素数组大小不够时，如果capacityIncrement大于0，则将Object数组的大小扩大为现有size+capacityIncrement；如果capacityIncrement<=0,则将Object数组的大小扩大为现有大小的2倍。
+- List集合读写效率
+    - ArrayList对元素的增加和删除都会引起数组的内存分配空间动态发生变化。因此，对其进行插入和删除速度较慢，但检索速度很快。
+    - LinkedList由于基于链表方式存放数据，增加和删除元素的速度较快，但是检索速度较慢。
+
+
+
 - **2. Set**
     - TreeSet：基于红黑树实现，支持有序性操作，例如根据一个范围查找元素的操作。但是查找效率不如 HashSet，HashSet 查找的时间复杂度为 O(1)，TreeSet 则为 O(logN)。
     - HashSet：基于哈希表实现，支持快速查找，但不支持有序性操作。并且失去了元素的插入顺序信息，也就是说使用 Iterator 遍历 HashSet 得到的结果是不确定的。
