--- a/Read/ReadJavaWiki/04.数据结构/02.ArrayList源码深度分析.md
+++ b/Read/ReadJavaWiki/04.数据结构/02.ArrayList源码深度分析.md
@@ -11,6 +11,13 @@
 
 
 
+### 00.一些常见问题思考
+- 在arrayList中System.arraycopy()和Arrays.copyOf()方法区别联系？System.arraycopy()和Arrays.copyOf()代码说明？
+- ArrayList添加元素时如何扩容？如何理解扩容因子？如何添加元素到指定位置，该操作复制是深拷贝还是浅拷贝？
+- 如何理解Java集合的快速失败机制 “fail-fast”？出现这个原因是什么？有何解决办法？
+- 如何理解ArrayList的扩容消耗？Arrays.asList方法后的List可以扩容吗？ArrayList如何序列化？
+
+
 
 
 ### 01.ArrayList基础介绍
@@ -165,13 +172,14 @@
         elementData = Arrays.copyOf(elementData, newCapacity);
     }
     ```
-- 当增加数据的时候，如果ArrayList的大小已经不满足需求时，那么就将数组变为原长度的1.5倍，之后的操作就是把老的数组拷到新的数组里面。例如，默认的数组大小是10，也就是说当我们`add`10个元素之后，再进行一次add时，就会发生自动扩容，数组长度由10变为了15具体情况如下所示。
+- 当增加数据的时候，如果ArrayList的大小已经不满足需求时，那么就将数组变为原长度的1.5倍，之后的操作就是把老的数组拷到新的数组里面。
+- 例如，**默认的数组大小是10，也就是说当我们`add`10个元素之后，再进行一次add时，就会发生自动扩容，数组长度由10变为了15具体情况**。
 
 
 
 
 ### 04.add(int index, E element)
-- 在指定索引处添加一个元素，先对index进行界限检查，；然后调用 ensureCapacityInternal 方法保证capacity足够大，再将从index开始之后的所有成员后移一个位置；将element插入index位置；最后size加1。[博客](https://github.com/yangchong211/YCBlogs)
+- 在指定索引处添加一个元素，先对index进行界限检查，然后调用 ensureCapacityInternal 方法保证capacity足够大，再将从index开始之后的所有成员后移一个位置；将element插入index位置；最后size加1。[博客](https://github.com/yangchong211/YCBlogs)
 - 可以看出它比add(index)方法还要多一个System.arraycopy。arraycopy()这个实现数组之间复制的方法一定要看一下，下面就用到了arraycopy()方法实现数组自己复制自己
     ```
     public void add(int index, E element) {
@@ -241,7 +249,7 @@
 
     /**
      * 从列表中删除指定元素的第一个出现（如果存在）。 如果列表不包含该元素，则它不会更改。
-     *返回true，如果此列表包含指定的元素
+     * 返回true，如果此列表包含指定的元素
      */
     public boolean remove(Object o) {
         if (o == null) {
@@ -355,8 +363,7 @@
 
 #### 09.ArrayList核心源代码
 - 如下所示，可能对某些方法理解有偏差，如果有，欢迎逗比程序员提出，谢谢
-
-    ```
+    ``` java
     public class ArrayList<E> extends AbstractList<E> implements List<E>, RandomAccess, Cloneable, java.io.Serializable{
         private static final long serialVersionUID = 8683452581122892189L;
     
