--- a/Read/ReadJavaWiki/04.数据结构/03.ArrayList问题思考.md
+++ b/Read/ReadJavaWiki/04.数据结构/03.ArrayList问题思考.md
@@ -3,6 +3,9 @@
 - 02.ArrayList的clone
 - 03.System.arraycopy()和Arrays.copyOf()
 - 04.ArrayList的Fail-Fast
+    - 4.1 先看一个删除元素案例
+    - 4.2 什么是“fail-fast”
+    - 4.3 如何解决“fail-fast”
 - 05.List怎么实现排序
 - 06.ArrayList多线程下会出现什么异常
 
@@ -44,7 +47,9 @@
         }
     }
     ```
-- 序列化时需要使用 ObjectOutputStream 的 writeObject() 将对象转换为字节流并输出。而 writeObject() 方法在传入的对象存在 writeObject() 的时候会去反射调用该对象的 writeObject() 来实现序列化。反序列化使用的是 ObjectInputStream 的 readObject() 方法，原理类似。
+- 序列化时需要使用 ObjectOutputStream 的 writeObject() 将对象转换为字节流并输出。
+    - 而 writeObject() 方法在传入的对象存在 writeObject() 的时候会去反射调用该对象的 writeObject() 来实现序列化。
+    - 反序列化使用的是 ObjectInputStream 的 readObject() 方法，原理类似。
     ```
     ArrayList<Student> list = new ArrayList();
     ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream(file));
@@ -71,7 +76,6 @@
             System.out.println(listStrCopy.get(i).toString());
         }
     }
-    实验结果，可以看出修改对原始数据没有改变，是复制了值
     0
     0
     1
@@ -79,7 +83,8 @@
     2
     100
     ```
-
+- 得出结果
+    - 实验结果，可以看出修改对原始数据没有改变，是复制了值。是深拷贝。是深拷贝吗？
 
 
 ### 03.System.arraycopy()和Arrays.copyOf()
@@ -155,19 +160,39 @@
     }
     ```
 - 得出结论
-    - `arraycopy()` 需要目标数组，将原数组拷贝到你自己定义的数组里或者原数组，而且可以选择拷贝的起点和长度以及放入新数组中的位置 `copyOf()` 是系统自动在内部新建一个数组，并返回该数组。[博客](https://github.com/yangchong211/YCBlogs)
-
-
+    - `arraycopy()` 需要目标数组，将原数组拷贝到你自己定义的数组里或者原数组，而且可以选择拷贝的起点和长度以及放入新数组中的位置。
+    - `copyOf()` 是系统自动在内部新建一个数组，并返回该数组。
 
 
 
 
 ### 04.ArrayList的Fail-Fast
+#### 4.1 先看一个删除元素案例
+- 通过增强for循环删除元素
+    ```
+    public static void main(String[] args){  
+    	List<Integer> list = new ArrayList<>();  
+            for (int i = 0; i < 5; i++)  
+                list.add(i);  
+            for (Integer num : list) 
+                if (num % 2 == 0) 
+                   list.remove(num);  
+     
+    }  
+    ```
+- 运行时直接出现ConcurrentModificationException异常。
+    - fail-fast 机制是java集合(Collection)中的一种错误机制。当多个线程对同一个集合的内容进行操作时，就可能会产生fail-fast事件。
+    - 例如：当某一个线程A通过iterator去遍历某集合的过程中，若该集合的内容被其他线程所改变了；那么线程A访问集合时，就会抛出ConcurrentModificationException异常，产生fail-fast事件。
+    - 当方法检测到对象的并发修改，但不允许这种修改时就抛出该异常。同时需要注意的是，该异常不会始终指出对象已经由不同线程并发修改，如果单线程违反了规则，同样也有可能会抛出该异常。
+
+
+#### 4.2 什么是“fail-fast”
 - Java集合的快速失败机制 “fail-fast”
     - java集合的一种错误检测机制，当多个线程对集合进行结构上的改变的操作时，有可能会产生 fail-fast 机制。
         - 例如：假设存在两个线程（线程1、线程2），线程1通过Iterator在遍历集合A中的元素，在某个时候线程2修改了集合A的结构（是结构上面的修改，而不是简单的修改集合元素的内容），那么这个时候程序就会抛出 ConcurrentModificationException 异常，从而产生fail-fast机制。
     - 原因：
-        - 迭代器在遍历时直接访问集合中的内容，并且在遍历过程中使用一个 modCount 变量。集合在被遍历期间如果内容发生变化，就会改变modCount的值。每当迭代器使用hashNext()/next()遍历下一个元素之前，都会检测modCount变量是否为expectedmodCount值，是的话就返回遍历；否则抛出异常，终止遍历。
+        - 迭代器在遍历时直接访问集合中的内容，并且在遍历过程中使用一个 modCount 变量。集合在被遍历期间如果内容发生变化，就会改变modCount的值。
+        - 每当迭代器使用hashNext()/next()遍历下一个元素之前，都会检测modCount变量是否为expectedmodCount值，是的话就返回遍历；否则抛出异常，终止遍历。
     - 解决办法：[博客](https://github.com/yangchong211/YCBlogs)
         - 1.在遍历过程中，所有涉及到改变modCount值得地方全部加上synchronized。
         - 2.使用CopyOnWriteArrayList来替换ArrayList
@@ -194,6 +219,55 @@
         }
     }
     ```
+
+
+#### 4.3 如何解决“fail-fast”
+- 在单线程环境下的解决办法
+    - 其实很简单，细心的朋友可能发现在Itr类中也给出了一个remove()方法：
+    - 在这个方法中，删除元素实际上调用的就是list.remove()方法，但是它多了一个操作：expectedModCount = modCount;
+    ``` java
+    public void remove() {
+        if (lastRet == -1)
+        throw new IllegalStateException();
+           checkForComodification();
+     
+        try {
+        AbstractList.this.remove(lastRet);
+        if (lastRet < cursor)
+            cursor--;
+        lastRet = -1;
+        expectedModCount = modCount;
+        } catch (IndexOutOfBoundsException e) {
+        throw new ConcurrentModificationException();
+        }
+    }
+    ```
+- Iterator迭代器移除元素
+    - Iterator是工作在一个独立的线程中，并且拥有一个 mutex 锁。 
+    - Iterator被创建之后会建立一个指向原来对象的单链索引表（副本），当原来的对象数量发生变化时，这个索引表的内容不会同步改变，所以当索引指针往后移动的时候就找不到要迭代的对象，所以按照 fail-fast 原则 Iterator 会马上抛出java.util.ConcurrentModificationException异常。
+    ```java
+    public class List_test {
+    	public static void main(String[] args){  
+    		List<Integer> list = new ArrayList<>();  
+    	        for (int i = 0; i < 5; i++)  
+    	            list.add(i);  
+    	        Iterator<Integer> it=list.iterator();
+    	        while(it.hasNext()){
+    	        	if(it.next()%2==0)
+    	        		it.remove();
+    	        }
+    	        
+    	 }  
+    }  
+    ```
+    - Iterator迭代器可以认为是一个由头指针开始的访问指针，即使删除元素，依旧保持勾连状态，可以正确删除List中元素。
+- 在多线程环境下的解决方法
+    - 有可能有朋友说ArrayList是非线程安全的容器，换成Vector就没问题了，实际上换成Vector还是会出现这种错误。
+    - 原因在于，虽然Vector的方法采用了synchronized进行了同步，但是实际上通过Iterator访问的情况下，每个线程里面返回的是不同的iterator，也即是说expectedModCount是每个线程私有。假若此时有2个线程，线程1在进行遍历，线程2在进行修改，那么很有可能导致线程2修改后导致Vector中的modCount自增了，线程2的expectedModCount也自增了，但是线程1的expectedModCount没有自增，此时线程1遍历时就会出现expectedModCount不等于modCount的情况了。
+    - 因此一般有2种解决办法：
+        - 1）在使用iterator迭代的时候使用synchronized或者Lock进行同步；
+        - 2）使用并发容器CopyOnWriteArrayList代替ArrayList和Vector。
+
 
 
 
