完善不能抛出到外部线程捕获案例

--- a/Read/ReadJavaWiki/06.线程知识/08.线程中stop原理深入.md
+++ b/Read/ReadJavaWiki/06.线程知识/08.线程中stop原理深入.md
@@ -8,6 +8,59 @@
 
 
 
+### 08.线程stop中断操作
+- stop方法
+    - public final void stop():		
+    - 停止线程的运行
+- interrupt方法
+    - public void interrupt():		
+    - 中断线程(这个翻译不太好),查看API可得当线程调用wait(),sleep(long time)方法的时候处于阻塞状态,可以通过这个方法清除阻塞
+- 中断可以理解为线程的一个标志位，它表示了一个运行中的线程是否被其他线程进行了中断操作。中断好比其他线程对该线程打了一个招呼。其他线程可以调用该线程的interrupt()方法对其进行中断操作，同时该线程可以调用isInterrupted（）来感知其他线程对其自身的中断操作，从而做出响应。
+- 另外，同样可以调用Thread的静态方法interrupted（）对当前线程进行中断操作，该方法会清除中断标志位。**需要注意的是，当抛出InterruptedException时候，会清除中断标志位，也就是说在调用isInterrupted会返回false。**
+- 下面结合具体的实例来看一看
+    ```
+    public class InterruptDemo {
+        public static void main(String[] args) throws InterruptedException {
+            //sleepThread睡眠1000ms
+            final Thread sleepThread = new Thread() {
+                @Override
+                public void run() {
+                    try {
+                        Thread.sleep(1000);
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    }
+                    super.run();
+                }
+            };
+            //busyThread一直执行死循环
+            Thread busyThread = new Thread() {
+                @Override
+                public void run() {
+                    while (true) ;
+                }
+            };
+            sleepThread.start();
+            busyThread.start();
+            sleepThread.interrupt();
+            busyThread.interrupt();
+            while (sleepThread.isInterrupted()) ;
+            System.out.println("sleepThread isInterrupted: " + sleepThread.isInterrupted());
+            System.out.println("busyThread isInterrupted: " + busyThread.isInterrupted());
+        }
+    }
+    ```
+- 输出结果
+    ```
+    > sleepThread isInterrupted: false
+    > busyThread isInterrupted: true
+    ```
+- 开启了两个线程分别为sleepThread和BusyThread,sleepThread睡眠1s，BusyThread执行死循环。然后分别对着两个线程进行中断操作，可以看出sleepThread抛出InterruptedException后清除标志位，而busyThread就不会清除标志位。
+- 另外，同样可以通过中断的方式实现线程间的简单交互， while (sleepThread.isInterrupted()) 表示在Main中会持续监测sleepThread，一旦sleepThread的中断标志位清零，即sleepThread.isInterrupted()返回为false时才会继续Main线程才会继续往下执行。因此，中断操作可以看做线程间一种简便的交互方式。
+- 一般在**结束线程时通过中断标志位或者标志位的方式可以有机会去清理资源，相对于武断而直接的结束线程，这种方式要优雅和安全。**
+
+
+
 
 
 ### 1.Thread线程
