--- a/Read/ReadJavaWiki/06.线程知识/09.线程通信交互介绍实践.md
+++ b/Read/ReadJavaWiki/06.线程知识/09.线程通信交互介绍实践.md
@@ -1,9 +1,9 @@
 #### 目录介绍
 - 01.线程间通信的两种方式
-    - 1.1 wait\(\)/notify\(\)
-    - 1.2 wait\(\)方法使用注意事项
-    - 1.3 notify\(\)方法使用注意事项
-    - 1.4 wait\(\)/notify\(\)协作
+    - 1.1 wait()/notify()
+    - 1.2 wait()方法使用注意事项
+    - 1.3 notify()方法使用注意事项
+    - 1.4 wait()/notify()协作
 - 02.Condition实现等待/通知
     - 2.1 Condition简单介绍
     - 2.2 Condition实现方式
@@ -13,8 +13,10 @@
 
 
 ### 01.锁池和等待池
-- 锁池:假设线程A已经拥有了某个对象(注意:不是类)的锁，而其它的线程想要调用这个对象的某个synchronized方法(或者synchronized块)，由于这些线程在进入对象的synchronized方法之前必须先获得该对象的锁的拥有权，但是该对象的锁目前正被线程A拥有，所以这些线程就进入了该对象的锁池中。
-- 等待池:假设一个线程A调用了某个对象的wait()方法，线程A就会释放该对象的锁后，进入到了该对象的等待池中
+- 锁池:
+    - 假设线程A已经拥有了某个对象(注意:不是类)的锁，而其它的线程想要调用这个对象的某个synchronized方法(或者synchronized块)，由于这些线程在进入对象的synchronized方法之前必须先获得该对象的锁的拥有权，但是该对象的锁目前正被线程A拥有，所以这些线程就进入了该对象的锁池中。
+- 等待池:
+    - 假设一个线程A调用了某个对象的wait()方法，线程A就会释放该对象的锁后，进入到了该对象的等待池中
 
 
 
@@ -32,7 +34,7 @@
 
 
 ### 04.通过一个案例对比
-- 验证：notify可能会导致死锁，而notifyAll则不会。notify唤醒一个等待的线程；notifyAll唤醒所有等待的线程。
+- 验证：notify可能会导致死锁，而notifyAll则不会。
     ```java
     public class WaitAndNotify {
         public static void main(String[] args) {
@@ -108,40 +110,41 @@
     Thread0 has been notified.
     Main Thread is end.
     ```
-
+- 得出结论
+    - notify唤醒一个等待的线程；notifyAll唤醒所有等待的线程。
 
 
 
 
 
 ### 01.线程间通信的两种方式
-#### 1.1 wait\(\)/notify\(\)
+#### 1.1 wait()/notify()
 - Object类中相关的方法有notify方法和wait方法。因为wait和notify方法定义在Object类中，因此会被所有的类所继承。这些方法都是**final**的，即它们都是不能被重写的，不能通过子类覆写去改变它们的行为。
-    - **①wait\(\)方法：** 让当前线程进入等待，并释放锁。
-    - **②wait\(long\)方法：** 让当前线程进入等待，并释放锁，不过等待时间为long，超过这个时间没有对当前线程进行唤醒，将**自动唤醒**。
-    - **③notify\(\)方法：** 让当前线程通知那些处于等待状态的线程，当前线程执行完毕后释放锁，并从其他线程中唤醒其中一个继续执行。
-    - **④notifyAll\(\)方法：** 让当前线程通知那些处于等待状态的线程，当前线程执行完毕后释放锁，将唤醒所有等待状态的线程。
+    - **①wait()方法：** 让当前线程进入等待，并释放锁。
+    - **②wait(long)方法：** 让当前线程进入等待，并释放锁，不过等待时间为long，超过这个时间没有对当前线程进行唤醒，将**自动唤醒**。
+    - **③notify()方法：** 让当前线程通知那些处于等待状态的线程，当前线程执行完毕后释放锁，并从其他线程中唤醒其中一个继续执行。
+    - **④notifyAll()方法：** 让当前线程通知那些处于等待状态的线程，当前线程执行完毕后释放锁，将唤醒所有等待状态的线程。
 
 
 
-#### 1.2 wait\(\)方法使用注意事项
-- ①当前的线程必须拥有当前对象的monitor，也即lock，就是锁，才能调用wait\(\)方法，否则将抛出异常java.lang.IllegalMonitorStateException。
-- ②线程调用wait\(\)方法，释放它对锁的拥有权，然后等待另外的线程来通知它（通知的方式是notify\(\)或者notifyAll\(\)方法），这样它才能重新获得锁的拥有权和恢复执行。
-- ③要确保调用wait\(\)方法的时候拥有锁，即，wait\(\)方法的调用必须放在synchronized方法或synchronized块中。
-- **wait\(\)与sleep\(\)比较**
-    - 当线程调用了wait\(\)方法时，它会释放掉对象的锁。[博客](https://github.com/yangchong211/YCBlogs)
-    - Thread.sleep\(\)，它会导致线程睡眠指定的毫秒数，但线程在睡眠的过程中是不会释放掉对象的锁的。
+#### 1.2 wait()方法使用注意事项
+- ①当前的线程必须拥有当前对象的monitor，也即lock，就是锁，才能调用wait()方法，否则将抛出异常java.lang.IllegalMonitorStateException。
+- ②线程调用wait()方法，释放它对锁的拥有权，然后等待另外的线程来通知它（通知的方式是notify()或者notifyAll()方法），这样它才能重新获得锁的拥有权和恢复执行。
+- ③要确保调用wait()方法的时候拥有锁，即，wait()方法的调用必须放在synchronized方法或synchronized块中。
+- **wait()与sleep()比较**
+    - 当线程调用了wait()方法时，它会释放掉对象的锁。[博客](https://github.com/yangchong211/YCBlogs)
+    - Thread.sleep()，它会导致线程睡眠指定的毫秒数，但线程在睡眠的过程中是不会释放掉对象的锁的。
 
 
 
-#### 1.3 notify\(\)方法使用注意事项
-- ①如果多个线程在等待，它们中的一个将会选择被唤醒。这种选择是随意的，和具体实现有关。（线程等待一个对象的锁是由于调用了wait\(\)方法）。
+#### 1.3 notify()方法使用注意事项
+- ①如果多个线程在等待，它们中的一个将会选择被唤醒。这种选择是随意的，和具体实现有关。（线程等待一个对象的锁是由于调用了wait()方法）。
 - ②被唤醒的线程是不能被执行的，需要等到当前线程放弃这个对象的锁，当前线程会在方法执行完毕后释放锁。
 
 
 
-#### 1.4 wait\(\)/notify\(\)协作
-- wait\(\)/notify\(\)协作的两个注意事项
+#### 1.4 wait()/notify()协作
+- wait()/notify()协作的两个注意事项
 
 
 ##### ①通知过早
@@ -177,7 +180,7 @@
         };
     }
     ```
-    - 两个方法，分别执行wait\(\)/notify\(\)方法。[博客](https://github.com/yangchong211/YCBlogs)
+    - 两个方法，分别执行wait()/notify()方法。[博客](https://github.com/yangchong211/YCBlogs)
     ```
     public static void main(String[] args) throws InterruptedException {
         MyRun run = new MyRun();
@@ -188,7 +191,7 @@
         aThread.start();
     }
     ```
-    - 如果notify\(\)方法先执行，将导致wait\(\)方法释放锁进入等待状态后，永远无法被唤醒，影响程序逻辑。应避免这种情况。
+    - 如果notify()方法先执行，将导致wait()方法释放锁进入等待状态后，永远无法被唤醒，影响程序逻辑。应避免这种情况。
 
 
 
@@ -294,14 +297,14 @@
     > Exception in thread "subtractThread1" list size =0  
     > wait end ThreadName=subtractThread1  
     > java.lang.IndexOutOfBoundsException: Index: 0, Size: 0  
-    >     at java.util.ArrayList.rangeCheck\(Unknown Source\)  
-    >     at java.util.ArrayList.remove\(Unknown Source\)  
-    >     at com.lvr.communication.Subtract.subtract\(Subtract.java:18\)  
-    >     at com.lvr.communication.ThreadSubtract.run\(ThreadSubtract.java:12\)
+    >     at java.util.ArrayList.rangeCheck(Unknown Source)  
+    >     at java.util.ArrayList.remove(Unknown Source)  
+    >     at com.lvr.communication.Subtract.subtract(Subtract.java:18)  
+    >     at com.lvr.communication.ThreadSubtract.run(ThreadSubtract.java:12)
     ```
 - **当第二个ThreadSubtract线程执行减法操作时，抛出下标越界异常。**
     - **原因分析：一开始两个ThreadSubtract线程等待状态，当ThreadAdd线程添加一个元素并唤醒所有线程后，第一个ThreadSubtract线程接着原来的执行到的地点开始继续执行，删除一个元素并输出集合大小。同样，第二个ThreadSubtract线程也如此，可是此时集合中已经没有元素了，所以抛出异常。**
-    - **解决办法：从等待状态被唤醒后，重新判断条件，看看是否扔需要进入等待状态，不需要进入再进行下一步操作。即把if\(\)判断，改成while\(\)。**
+    - **解决办法：从等待状态被唤醒后，重新判断条件，看看是否扔需要进入等待状态，不需要进入再进行下一步操作。即把if()判断，改成while()。**
     ```
     public void subtract(){
         try {
@@ -326,19 +329,19 @@
 
 ### 02.Condition实现等待/通知
 #### 2.1 Condition简单介绍
-- 关键字synchronized与wait\(\)和notify\(\)/notifyAll\(\)方法相结合可以实现等待/通知模式，类似ReentrantLock也可以实现同样的功能，但需要借助于Condition对象。
-- 关于Condition实现等待/通知就不详细介绍了，可以完全类比wait\(\)/notify\(\)，基本使用和注意事项完全一致。  
+- 关键字synchronized与wait()和notify()/notifyAll()方法相结合可以实现等待/通知模式，类似ReentrantLock也可以实现同样的功能，但需要借助于Condition对象。
+- 关于Condition实现等待/通知就不详细介绍了，可以完全类比wait()/notify()，基本使用和注意事项完全一致。  
 - 就只简单介绍下类比情况：[博客](https://github.com/yangchong211/YCBlogs)
-    - **condition.await\(\)————&gt;lock.wait\(\)**
-    - **condition.await\(long time, TimeUnit unit\)————&gt;lock.wait\(long timeout\)**
-    - **condition.signal\(\)————&gt;lock.notify\(\)**
-    - **condition.signaAll\(\)————&gt;lock.notifyAll\(\)**
+    - **condition.await()————&gt;lock.wait()**
+    - **condition.await(long time, TimeUnit unit)————&gt;lock.wait(long timeout)**
+    - **condition.signal()————&gt;lock.notify()**
+    - **condition.signaAll()————&gt;lock.notifyAll()**
 
 
 #### 2.2 Condition实现方式
 - **特殊之处：synchronized相当于整个ReentrantLock对象只有一个单一的Condition对象情况。而一个ReentrantLock却可以拥有多个Condition对象，来实现通知部分线程。**
 - **具体实现方式：**  
-    - 假设有两个Condition对象：ConditionA和ConditionB。那么由ConditionA.await\(\)方法进入等待状态的线程，由ConditionA.signalAll\(\)通知唤醒；由ConditionB.await\(\)方法进入等待状态的线程，由ConditionB.signalAll\(\)通知唤醒。篇幅有限，代码示例就不写了。
+    - 假设有两个Condition对象：ConditionA和ConditionB。那么由ConditionA.await()方法进入等待状态的线程，由ConditionA.signalAll()通知唤醒；由ConditionB.await()方法进入等待状态的线程，由ConditionB.signalAll()通知唤醒。篇幅有限，代码示例就不写了。
 
 
 
