--- a/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
+++ b/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
@@ -105,6 +105,10 @@
 
 
 
+缺点
+1.比较欠缺管理能力
+
+
 ### 6.开源项目
 - 开源了组件化项目，技术博客汇总，视频播放器封装库，webView库，组件接口通信库，状态管理器，recyclerView封装库等等。
 - 通用视频播放器：https://github.com/yangchong211/YCVideoPlayer
