--- a/Read/ReadJavaWiki/06.线程知识/05.线程中Sleep原理深入.md
+++ b/Read/ReadJavaWiki/06.线程知识/05.线程中Sleep原理深入.md
@@ -2,6 +2,33 @@
 
 
 
+### 04.线程sleep休眠操作
+#### 4.1 sleep使用介绍
+- sleep方法
+    - public static void sleep(long time) ;	
+    - time表达的意思是休眠的时间 , 单位是毫秒
+- sleep方法具体作用
+    - 在指定的毫秒数内让当前正在执行的线程休眠（暂停执行），此操作受到系统计时器和调度程序精度和准确性的影响。
+    - 让其他线程有机会继续执行，但它并不释放对象锁。也就是如果有Synchronized同步块，其他线程仍然不能访问共享数据。注意该方法要捕获异常。
+- sleep如何使低优先级线程执行
+    - 比如有两个线程同时执行(没有Synchronized)，一个线程优先级为MAX_PRIORITY，另一个为MIN_PRIORITY，如果没有Sleep()方法，只有高优先级的线程执行完成后，低优先级的线程才能执行；但当高优先级的线程sleep(5000)后，低优先级就有机会执行了。
+    - 总之，sleep()可以使低优先级的线程得到执行的机会，当然也可以让同优先级、高优先级的线程有执行的机会。
+
+
+#### 4.2 sleep(0)的作用是什么
+- Thread.sleep(0)的作用是啥？
+    - 由于Java采用抢占式的线程调度算法，因此可能会出现某条线程常常获取到CPU控制权的情况，为了让某些优先级比较低的线程也能获取到CPU控制权，可以使用Thread.sleep(0)手动触发一次操作系统分配时间片的操作，这也是平衡CPU控制权的一种操作。[博客](https://github.com/yangchong211/YCBlogs)
+
+
+#### 4.3 sleep后怎么被唤醒
+- 怎么唤醒一个阻塞的线程？
+    - 如果线程是因为调用了wait()、sleep()或者join()方法而导致的阻塞，可以中断线程，并且通过抛出InterruptedException来唤醒它；
+    - 如果线程遇到了IO阻塞，无能为力，因为IO是操作系统实现的，Java代码并没有办法直接接触到操作系统。
+- 假设现在是 2018-4-7 12:00:00.000，如果我调用一下 Thread.Sleep(1000) ，在 2018-4-7 12:00:01.000 的时候，这个线程会不会被唤醒？
+    - 答案是：不一定。因为你只是告诉操作系统：在未来的1000毫秒内我不想再参与到CPU竞争。那么1000毫秒过去之后，这时候也许另外一个线程正在使用CPU，那么这时候操作系统是不会重新分配CPU的，直到那个线程挂起或结束；况且，即使这个时候恰巧轮到操作系统进行CPU 分配，那么当前线程也不一定就是总优先级最高的那个，CPU还是可能被其他线程抢占去。
+    - 与此相似的，Thread有个Resume函数，是用来唤醒挂起的线程的。好像上面所说的一样，这个函数只是“告诉操作系统我从现在起开始参与CPU竞争了”，这个函数的调用并不能马上使得这个线程获得CPU控制权。
+
+
 
 ### 03.wait和sleep方法
 - wait和sleep方法的区别
@@ -87,10 +114,11 @@
 
 ### 03.sleep(0)作用是什么
 - Thread.Sleep(0) 。既然是 Sleep 0 毫秒，那么他跟去掉这句代码相比，有啥区别么？
-    - 答案是：有，而且区别很明显。Thread.Sleep(0)的作用，就是“触发操作系统立刻重新进行一次CPU竞争”。竞争的结果也许是当前线程仍然获得CPU控制权，也许会换成别的线程获得CPU控制权。这也是我们在大循环里面经常会写一句Thread.Sleep(0)，因为这样就给了其他线程比如Paint线程获得CPU控制权的权力，这样界面就不会假死在那里。
+    - 答案是：有，而且区别很明显。Thread.Sleep(0)的作用，就是“触发操作系统立刻重新进行一次CPU竞争”。
+    - 竞争的结果也许是当前线程仍然获得CPU控制权，也许会换成别的线程获得CPU控制权。这也是我们在大循环里面经常会写一句Thread.Sleep(0)，因为这样就给了其他线程比如Paint线程获得CPU控制权的权力，这样界面就不会假死在那里。
 - sleep(0)会抛出异常吗？
     - 会抛出异常，代码如下所示
-    ```java
+    ``` java
     public static void sleep(long millis, int nanos)
         throws InterruptedException {
             if (millis < 0) {
