--- a/Read/ReadJavaWiki/06.线程知识/06.线程中join原理深入.md
+++ b/Read/ReadJavaWiki/06.线程知识/06.线程中join原理深入.md
@@ -7,6 +7,76 @@
 
 
 
+### 05.线程join加入操作
+#### 5.1 join操作介绍
+- join方法
+    - public final void join()
+    - 等待该线程执行完毕了以后,其他线程才能再次执行。
+    - Thread的非静态方法join()让一个线程B“加入”到另外一个线程A的尾部。在A执行完毕之前，B不能工作。
+    - 保证当前线程停止执行，直到该线程所加入的线程完成为止。然而，如果它加入的线程没有存活，则当前线程不需要停止。
+- join()有什么作用？
+    - Thread的join()的含义是等待该线程终止，即将挂起调用线程的执行，直到被调用的对象完成它的执行。比如存在两个线程t1和t2，下述代码表示先启动t1，直到t1的任务结束，才轮到t2启动。
+    ``` java
+    t1.start();
+    t1.join(); 
+    t2.start();
+    ```
+- 注意事项:
+    - 在线程启动之后，才能调用调用方法。如果没有启动，调用该方法，则直接会……
+
+
+#### 5.2 如何保证多个线程顺序
+- 经典面试题：现在有T1、T2、T3三个线程，你怎样保证T2在T1执行完后执行，T3在T2执行完后执行？
+    - Thread类中的join方法的主要作用就是同步，它可以使得线程之间的并行执行变为串行执行。当我们调用某个线程的这个方法时，这个方法会挂起调用线程，直到被调用线程结束执行，调用线程才会继续执行。
+    ``` java
+    /**
+     * 现在有T1、T2、T3三个线程，你怎样保证T2在T1执行完后执行，T3在T2执行完后执行？
+     */
+    private void test2(){
+        Thread t1 = new Thread(new Runnable() {
+            @Override
+            public void run() {
+                Log.d("线程执行","Thread1");
+            }
+        });
+        Thread t2 = new Thread(new Runnable() {
+            @Override
+            public void run() {
+                Log.d("线程执行","Thread2");
+            }
+        });
+        Thread t3 = new Thread(new Runnable() {
+            @Override
+            public void run() {
+                Log.d("线程执行","Thread3");
+            }
+        });
+    
+        t1.start();
+        try {
+            t1.join();
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+    
+        t2.start();
+        try {
+            t2.join();
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+    
+        t3.start();
+        try {
+            t3.join();
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
+    ```
+
+
+
 ### 01.join方法作用
 - join方法
     - public final void join()
@@ -25,7 +95,8 @@
 - 注意事项:
     - 在线程启动之后，才能调用调用方法。如果没有启动，调用该方法，则直接会……
 - join与start调用顺序问题
-    - join方法必须在线程start方法调用之后调用才有意义。这个也很容易理解：如果一个线程都没有start，那它也就无法同步了。因为执行完start方法才会创建线程。
+    - join方法必须在线程start方法调用之后调用才有意义。
+    - 这个也很容易理解：如果一个线程都没有start，那它也就无法同步了。因为执行完start方法才会创建线程。
 
 
 
