--- a/Read/ReadJavaWiki/06.线程知识/12.线程捕获异常的分析.md
+++ b/Read/ReadJavaWiki/06.线程知识/12.线程捕获异常的分析.md
@@ -7,16 +7,13 @@
 
 
 
-### 好消息
-- 博客笔记大汇总【16年3月到至今】，包括Java基础及深入知识点，Android技术博客，Python学习笔记等等，还包括平时开发中遇到的bug汇总，当然也在工作之余收集了大量的面试题，长期更新维护并且修正，持续完善……开源的文件是markdown格式的！同时也开源了生活博客，从12年起，积累共计N篇[近100万字，陆续搬到网上]，转载请注明出处，谢谢！
-- **链接地址：https://github.com/yangchong211/YCBlogs**
-- 如果觉得好，可以star一下，谢谢！当然也欢迎提出建议，万事起于忽微，量变引起质变！
-
 
 
 ### 01.为什么不能抛出到外部线程捕获
 - 在Java中，线程中的异常是不能抛出到调用该线程的外部方法中捕获的。
-- 为什么不能抛出到外部线程捕获？因为线程是独立执行的代码片断，线程的问题应该由线程自己来解决，而不要委托到外部。”基于这样的设计理念，在Java中，线程方法的异常都应该在线程代码边界之内（run方法内）进行try catch并处理掉.换句话说，我们不能捕获从线程中逃逸的异常。
+- 为什么不能抛出到外部线程捕获？
+    - 因为线程是独立执行的代码片断，线程的问题应该由线程自己来解决，而不要委托到外部。
+    - ”基于这样的设计理念，在Java中，线程方法的异常都应该在线程代码边界之内（run方法内）进行try catch并处理掉。换句话说，我们不能捕获从线程中逃逸的异常。
 
 
 ### 02.怎么进行的限制
