完善生产者和消费者案例

--- a/Read/ReadJavaWiki/04.数据结构/01.数据集合序言介绍.md
+++ b/Read/ReadJavaWiki/04.数据结构/01.数据集合序言介绍.md
@@ -6,6 +6,9 @@
 - 05.集合一些总结
 
 
+### 00.一些常见问题思考
+- Java集合框架中有哪些类？都有什么特点？集合框架用到Collection接口，这个接口有何特点？
+
 
 ### 01.学习集合序言
 - 很多写程序的人都听说过一个公式，程序 = 算法 + 数据结构。
@@ -142,15 +145,40 @@
 
 
 
-- **2. Set**
-    - TreeSet：基于红黑树实现，支持有序性操作，例如根据一个范围查找元素的操作。但是查找效率不如 HashSet，HashSet 查找的时间复杂度为 O(1)，TreeSet 则为 O(logN)。
-    - HashSet：基于哈希表实现，支持快速查找，但不支持有序性操作。并且失去了元素的插入顺序信息，也就是说使用 Iterator 遍历 HashSet 得到的结果是不确定的。
-    - LinkedHashSet：具有 HashSet 的查找效率，且内部使用双向链表维护元素的插入顺序。
-- **3.Map**
+
+#### 5.3 Map集合
+- Map集合从何而来
+	* 我们通过什么东西来标识我们的学生在班级的唯一性. 我们都每一个学生应该存在一个学号 , 而这个学号是唯一的。那么我们就可以通过这个学号来表示我们学生在班级的唯一性。那么也就说,我们的学号和学生的姓名之间应该存在一个对应关系吧
+	* 那么我们怎么存储这样对应关系的数据呢?针对这个情况java就给我们提供了另外一种集合进行表示,而这个集合就是Map 。Map集合结构是由两列组成,第一列被称之为键 , 第二例被称之为值 ; 并且我们都知道键应该是唯一的，而对值没有要求。
+    ```
+    学号          姓名
+    stu001        张三
+    stu002        李四
+    stu003        王五
+    stu004        王五
+    stu005        杨充逗比
+    ```
+- Collection集合和Map集合的区别？
+	* Map集合由两列组成(双列集合) , 而Collection集合由一列组成(单列集合) ;  Map集合是夫妻对 , Collection孤狼
+	* Collection集合中的Set集合可以保证元素的唯一性 , 而Map集合中的键是唯一的
+	* Collection集合的数据结构是对存储的元素是有效的,而Map集合的数据结构只和键有关系,和值没有关系
+- Map集合主要有哪些
     - TreeMap：基于红黑树实现。
     - HashMap：基于哈希表实现。
     - HashTable：和 HashMap 类似，但它是线程安全的，这意味着同一时刻多个线程可以同时写入 HashTable 并且不会导致数据不一致。它是遗留类，不应该去使用它。现在可以使用 ConcurrentHashMap 来支持线程安全，并且 ConcurrentHashMap 的效率会更高，因为 ConcurrentHashMap 引入了分段锁。
     - LinkedHashMap：使用双向链表来维护元素的顺序，顺序为插入顺序或者最近最少使用（LRU）顺序。
+- Map集合的特点
+	* 将键映射到值的对象
+	* 一个映射不能包含重复的键
+	* 每个键最多只能映射到一个值
+
+
+
+- **2. Set**
+    - TreeSet：基于红黑树实现，支持有序性操作，例如根据一个范围查找元素的操作。但是查找效率不如 HashSet，HashSet 查找的时间复杂度为 O(1)，TreeSet 则为 O(logN)。
+    - HashSet：基于哈希表实现，支持快速查找，但不支持有序性操作。并且失去了元素的插入顺序信息，也就是说使用 Iterator 遍历 HashSet 得到的结果是不确定的。
+    - LinkedHashSet：具有 HashSet 的查找效率，且内部使用双向链表维护元素的插入顺序。
+
 - **4. Queue**
     - LinkedList：可以用它来实现双向队列。
     - PriorityQueue：基于堆结构实现，可以用它来实现优先队列。
