--- a/Read/ReadJavaWiki/04.数据结构/07.HashMap源码深度分析.md
+++ b/Read/ReadJavaWiki/04.数据结构/07.HashMap源码深度分析.md
@@ -9,12 +9,16 @@
 - 08.Hash函数实现
 
 
-### 好消息
-- 博客笔记大汇总【16年3月到至今】，包括Java基础及深入知识点，Android技术博客，Python学习笔记等等，还包括平时开发中遇到的bug汇总，当然也在工作之余收集了大量的面试题，长期更新维护并且修正，持续完善……开源的文件是markdown格式的！同时也开源了生活博客，从12年起，积累共计N篇[近100万字，陆续搬到网上]，转载请注明出处，谢谢！
-- **链接地址：https://github.com/yangchong211/YCBlogs**
-- 如果觉得好，可以star一下，谢谢！当然也欢迎提出建议，万事起于忽微，量变引起质变！
-
-
+### 00.一些常见问题思考
+- HashMap有哪些特点，简单说一下？HashMap内部的结构是怎样的？简单说一下什么是桶，作用是什么？
+- HashMap和Hashtable的区别？HashMap在put、get元素的过程？体现了什么数据结构？
+- 当有键值对插入时，HashMap会发生什么 ? 对于查找一个key时，HashMap会发生什么 ?
+- 如何保证HashMap线程安全？底层怎么实现的？HashMap是有序的吗？如何实现有序？
+- HashMap存储两个对象的hashcode相同会发生什么？如果两个键的hashcode相同，你如何获取值对象？
+- 为什么HashMap中String、Integer这样的包装类适合作为K？如果要用对象最为key，该如何操作？
+- HashMap为什么不直接使用hashCode()处理后的哈希值直接作为table的下标？
+- HashMap是如何扩容的？如何理解HashMap的大小超过了负载因子定义的容量？重新调整HashMap大小存在什么问题吗？
+- HashMap是线程安全的吗？多线程条件下put存储数据会发生什么情况？如何理解它并发性？
 
 
 ### 01.HashMap内部结构
