--- a/Read/ReadJavaWiki/04.数据结构/21.LinkedHashMap2.md
+++ b/Read/ReadJavaWiki/04.数据结构/21.LinkedHashMap2.md
@@ -65,7 +65,7 @@
 
 #### 1.2 afterNodeInsertion函数
 - 代码如下所示
-    ```
+    ``` java
     void afterNodeInsertion(boolean evict) { // possibly remove eldest
         LinkedHashMap.Entry<K,V> first;
         // 如果定义了溢出规则，则执行相应的溢出
@@ -79,7 +79,7 @@
 
 #### 1.3 afterNodeRemoval函数
 - 代码如下所示
-    ```
+    ``` java
     void afterNodeRemoval(Node<K,V> e) { // unlink
         // 从链表中移除节点
         LinkedHashMap.Entry<K,V> p =
@@ -124,7 +124,7 @@
 
 ### 03.构造函数分析
 - 构造函数如下所示，一般用无参构造方法。
-    ```java
+    ``` java
     //自定义初始容量与装载因子
     //内部元素按照插入顺序进行排序
     public LinkedHashMap(int initialCapacity, float loadFactor) {
@@ -287,7 +287,9 @@
 
 
 ### 07.LRUCache拓展训练
-- 在 Android 的实际应用开发中，LRUCache 算法是很常见的，一种典型的用途就是用来在内存中缓存 Bitmap，因为从 IO 流中读取 Bitmap 的代价很大，为了防止多次从磁盘中读取某张图片，所以可以选择在内存中缓存 Bitmap。但内存空间也是有限的，所以也不能每张图片都进行缓存，需要有选择性地缓存一定数量的图片，而最近最少使用算法（LRUCache）是一个可行的选择
+- 在 Android 的实际应用开发中
+    - LRUCache 算法是很常见的，一种典型的用途就是用来在内存中缓存 Bitmap，因为从 IO 流中读取 Bitmap 的代价很大，为了防止多次从磁盘中读取某张图片，所以可以选择在内存中缓存 Bitmap。
+    - 但内存空间也是有限的，所以也不能每张图片都进行缓存，需要有选择性地缓存一定数量的图片，而最近最少使用算法（LRUCache）是一个可行的选择。
 - 这里利用 LinkedHashMap 可以按照元素使用顺序进行排列的特点，来实现一个 LRUCache 策略的缓存
     ```
     public class LRUCache {
