--- a/Read/ReadJavaWiki/06.线程知识/12.线程捕获异常的分析.md
+++ b/Read/ReadJavaWiki/06.线程知识/12.线程捕获异常的分析.md
@@ -12,8 +12,10 @@
 ### 01.为什么不能抛出到外部线程捕获
 - 在Java中，线程中的异常是不能抛出到调用该线程的外部方法中捕获的。
 - 为什么不能抛出到外部线程捕获？
-    - 因为线程是独立执行的代码片断，线程的问题应该由线程自己来解决，而不要委托到外部。
+    - JVM的这种设计源自于这样一种理念：因为线程是独立执行的代码片断，线程的问题应该由线程自己来解决，而不要委托到外部。
     - ”基于这样的设计理念，在Java中，线程方法的异常都应该在线程代码边界之内（run方法内）进行try catch并处理掉。换句话说，我们不能捕获从线程中逃逸的异常。
+    - 基于这样的设计理念，在Java中，线程方法的异常（无论是checked还是unchecked exception），都应该在线程代码边界之内（run方法内）进行try catch并处理掉。
+- 换句话说，我们不能捕获从线程中逃逸的异常。
 
 
 ### 02.怎么进行的限制
@@ -21,11 +23,6 @@
 - 如果在线程中抛出了线程会怎么样？线程会立即终结。
     - 线程依然有可能抛出unchecked exception（如运行时异常），当此类异常跑抛出时，线程就会终结。
     - 而对于主线程和其他线程完全不受影响，且完全感知不到某个线程抛出的异常(也是说完全无法catch到这个异常)。
-
-
-### 03.JVM中这种设计理念
-- JVM的这种设计源自于这样一种理念：“线程是独立执行的代码片断，线程的问题应该由线程自己来解决，而不要委托到外部。”基于这样的设计理念，在Java中，线程方法的异常（无论是checked还是unchecked exception），都应该在线程代码边界之内（run方法内）进行try catch并处理掉。
-- 换句话说，我们不能捕获从线程中逃逸的异常。
 
 
 ### 04.测试run方法中抛运行时异常
@@ -76,7 +73,7 @@
 
 ### 05.Thread.UncaughtExceptionHandler
 - 其实jdk5之前的解决办法是线程组，在jdk5之后新引进了一个接口Thread.UncaughtExceptionHandler这个接口的作用就是为每个创建的线程都附着一个异常处理器，然后我们为了使用到这个组件去创建线程，又引进了一个新的对象 ThreadFactory对象，这个也是一个接口，我们重写的方法newThread就是它返回新线程的方法，在这个方法中为每个新创建的线程都设置上面的Thread.UncaughtExceptionHandler，然后将带有异常处理器的线程返回看下面的代码
-- 第一步：创建Thread.UncaughtExceprionhandler的实例
+- 第一步：创建Thread.UncaughtExceptionHandler 的实例
     ```
     class MyUncaughtExceptionhandler implements Thread.UncaughtExceptionHandler {
     
