--- a/Read/ReadJavaWiki/06.线程知识/13.ThreadLocal分析.md
+++ b/Read/ReadJavaWiki/06.线程知识/13.ThreadLocal分析.md
@@ -7,11 +7,18 @@
 - 06.ThreadLocal使用场景
 
 
+
+### 00.思考一些问题分析
+- ThreadLocal是干什么的？为何需要它？
+
+
 ### 01.ThreadLocal作用介绍
 - ThreadLocal的作用主要是用来做什么的？
-    - 这个类提供线程本地变量。这个变量不同于线程中普通的副本变量，因为每个线程都持有一个属于它自己的变量，并且可以通过 get、set 方法来对其进行访问和修改，并且初始时会独立创建变量的副本保存在每个线程中。ThreadLocal 对象一般是一个线程的私有字段，用于和线程中的某个信息相关联（比如：用户 ID、交易 ID）。
+    - 这个类提供线程本地变量。这个变量不同于线程中普通的副本变量，因为每个线程都持有一个属于它自己的变量，并且可以通过 get、set 方法来对其进行访问和修改，并且初始时会独立创建变量的副本保存在每个线程中。
+    - ThreadLocal 对象一般是一个线程的私有字段，用于和线程中的某个信息相关联（比如：用户 ID、交易 ID）。
     - 每个线程都拥有对其保存的线程局部变量副本的隐式引用，只要线程处于活动状态并且其对应的 ThreadLocal 对象字段可用时就可以访问。线程结束后，所有的线程保存的 ThreadLocal 对象将会被垃圾回收器回收，除非还有其他的引用指向这些存在的对象。
-- 从官方说明中，我们可以知道利用这个类我们可以在每一个线程中都保存一个变量，并且不同线程中的这个变量互不冲突，我们还可以通过 ThreadLocal 对象的 get、set 方法来读取、修改这个变量的值。
+- 官方说明是怎么样的？
+    - 我们可以知道利用这个类我们可以在每一个线程中都保存一个变量，并且不同线程中的这个变量互不冲突，我们还可以通过 ThreadLocal 对象的 get、set 方法来读取、修改这个变量的值。
 
 
 
@@ -25,7 +32,7 @@
     - 还有很多文章在对比 ThreadLocal 与 synchronize 的异同。既然是作比较，那应该是认为这两者解决相同或类似的问题。
     - 上面的描述，问题在于，ThreadLocal并不解决多线程共享变量的问题。既然变量不共享，那就更谈不上同步的问题。
 - 合理的理解
-    - ThreadLoal 变量，它的基本原理是，同一个 ThreadLocal 所包含的对象（对ThreadLocal< String >而言即为 String 类型变量），在不同的 Thread 中有不同的副本（实际是不同的实例，后文会详细阐述）。这里有几点需要注意
+    - ThreadLocal 变量，它的基本原理是，同一个 ThreadLocal 所包含的对象（对ThreadLocal< String >而言即为 String 类型变量），在不同的 Thread 中有不同的副本（实际是不同的实例，后文会详细阐述）。这里有几点需要注意
     - 因为每个 Thread 内有自己的实例副本，且该副本只能由当前 Thread 使用。这是也是ThreadLocal 命名的由来
     - 既然每个 Thread 有自己的实例副本，且其它Thread不可访问，那就不存在多线程间共享的问题。既无共享，何来同步问题，又何来解决同步问题一说？
 - 那 ThreadLocal 到底解决了什么问题，又适用于什么样的场景？
@@ -38,7 +45,7 @@
 
 ### 03.ThreadLocal用法
 - 下面通过如下代码说明 ThreadLocal 的使用方式
-    ```java
+    ``` java
     private void test(){
         int threads = 3;
         final CountDownLatch countDownLatch = new CountDownLatch(threads);
@@ -97,7 +104,7 @@
     }
     ```
 - 实例分析，ThreadLocal本身支持范型。该例使用了 StringBuilder 类型的 ThreadLocal 变量。可通过 ThreadLocal 的 get() 方法读取 StringBuidler 实例，也可通过 set(T t)方法设置StringBuilder。上述代码执行结果如下
-    ```java
+    ``` java
     2019-09-02 18:28:37.393 20999-21043/com.ycbjie.ycscrollpager I/System.out: Thread name:thread - 1 , ThreadLocal hashcode:117278486, Instance hashcode:218610308, Value:0
     2019-09-02 18:28:37.394 20999-21043/com.ycbjie.ycscrollpager I/System.out: Thread name:thread - 1 , ThreadLocal hashcode:117278486, Instance hashcode:218610308, Value:01
     2019-09-02 18:28:37.395 20999-21044/com.ycbjie.ycscrollpager I/System.out: Thread name:thread - 2 , ThreadLocal hashcode:117278486, Instance hashcode:221696621, Value:0
