--- a/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
+++ b/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
@@ -40,6 +40,7 @@
 - 在滴滴开发经历
     - 按时按量完成需求开发，bug<3，线上工单<3/年，优化地图&导航异常降级，完善核心链路技术埋点，完善监控体系。
     - 快速适应flutter混合开发，承担地图&导航&定位&其他等模块大改版，不断拉齐Android和iOS两端差异化，承接基础业务开发。
+    - 负责改版中flutter容器开发，地图业务channel通信，改造方案设计，地图&Flutter容器多点触摸事件分发处理。
     - 开发磁盘缓存查看工具极大提高测试效率，开发地图mock各种场景工具，地图模拟行走工具，导航模拟行走工具，主要是辅助测试童鞋模拟国外业务场景测试，提高测试效率，有些提到了DoKit中。
 - 在立思辰开发经历
     - 负责项目业务拆分，功能组件抽取，服务组件，以及基础组件的App代码开发。将多个app不断完善抽取分离组件化module，为后期开发定制app快速高效打下基础。
@@ -60,8 +61,8 @@
 
 #### 4.2 2020年4月到2021年3月份
 - 负责立思辰教育旗下诸葛书/豆神学习机/豆神直播课开发迭代
-    - 1.组件化开发项目，负责项目业务沟通，项目排期，进度把控等。
-    - **2.负责项目基础搭建工作，拆分业务组件，服务组件，功能组件，基础组件，完善项目组件化，分离和复用**。
+    - 1.负责项目基础搭建工作，拆分业务组件，服务组件，功能组件，基础组件，完善项目组件化，分离和复用。
+    - 2.负责后期多个定制项目App，组件化快速开发项目，负责项目业务沟通，项目排期，进度把控等。
 - 负责中间组件开发【公共库】
     - **1.针对多个项目，搭建一套可以切换内核，业务解耦合，高拓展性通用视频播放器，用于4个项目**。
     - 2.针对kindle或者平板学习项目开发通用崩溃重启和崩溃日志记录库，用于2个项目。
