--- a/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
+++ b/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
@@ -21,12 +21,13 @@
     - 6年的Android开发经验，能独立地完成开发的工作。有github封装库长期维护的库！有组件化项目经验！
     - 理解基本数据类型和包装类原理，并且开发中避免常识性bug，对泛型，线程，反射，异常等有较深理解，具有扎实的Java语言基础。
         - 常识性bug，比如针对id使用long或者String，避免返回过长导致字段截取，出现不可预知的bug；比如之前对地图经纬度数据对比，修改直接使用double判断(精度丢失造成不准)
-        - 范型，主要是约束，编译器检查代码规范，封装base接口，需要用到范型
-        - 线程，生命周期，线程排查，优先级，name等等
+        - 范型，主要是约束，编译器检查代码规范，封装base接口，需要用到范型。有哪些错误的范型使用，举例说明
+        - 线程，生命周期，线程排查，优先级，name等等。线程的异常捕获问题，线程runnable 和callback问题
     - 对数据结构比如常见List，Map，Set，Deque，Stack等熟悉，能够结合实际场景选择合适的集合。
         - 比如说，针对activity任务栈管理，使用Stack管理；
         - 比如说，针对针对webView库，读取内存缓存资源，因为读远大于写，保证数据安全，选择CopyOnWriteArrayList；
         - 比如说，针对磁盘缓存file查看工具，采用Deque队列管理页面回退
+        - 主要是复习HashMap，LinkedHashMap(淘汰算法)
     - 熟悉面向对象编程思想，熟练运用设计模式原则，写出高质量可复用，拓展性强，方便维护和阅读的代码，具体可见技术产出库。
     - 熟悉Http协议，熟悉常用状态码，知道https请求传输数据过程，较为熟悉网络协议知识点，开发过网络请求拦截日志信息工具，有接口健壮性自测能力。
     - 熟悉Android中四大组件，Handler通信机制，IPC机制，Window，AMS，WMS，等基础原理，并实际开发灵活运用。
@@ -103,10 +104,9 @@
 - 极度自律，喜欢编程，能够克服开发过程中绝大部分的技术问题，对于GitHub开源项目持续更新和维护。
 - 虽然工作上不是很聪明，但是做事靠谱和认真，一步一个脚印，有始有终，能够持续不断完善自我，不算会表达。
 
-
-
-缺点
-1.比较欠缺管理能力
+- 缺点
+    - 1.比较欠缺管理能力
+    - 2.
 
 
 ### 6.开源项目
